# cii

./: .gitignore  CMakeLists.txt  bootstrap  cii.pc.in  cleanup  configure.ac  makefile
examples/: CMakeLists.txt
misc/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  strerror.c
test/: CMakeLists.txt  test-arith.c
