file(GLOB_RECURSE examples CONFIGURE_DEPENDS *.c)
list(FILTER examples EXCLUDE REGEX "(integer|getword).*")
foreach(file ${examples})
    get_filename_component(exe ${file} NAME_WE)
    if(${exe} MATCHES "xref|sieve|sort|spin" AND NOT ${WITH_THREAD})
        continue()
    endif()
    if(${exe} STREQUAL "cref")
        add_executable(${exe} ${file} integer.c)
    elseif(${exe} MATCHES "xref|wf")
        add_executable(${exe} ${file} getword.c)
    else()
        add_executable(${exe} ${file})
    endif()
    target_link_libraries(${exe} ${PROJECT_NAME})
endforeach()
